test phase of service and controller layers